<androidx.appcompat.widget.LinearLayoutCompat
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/quantity"
        android:textSize="30sp"
        android:textAllCaps="true"
        android:padding="16dp" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/increment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/val"
            android:textAllCaps="true"
            android:textSize="30sp"
            android:layout_marginEnd="10dp"
            android:textColor="@color/black"
            android:onClick="increment"/>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/quantityvalue"
            android:textSize="30sp"
            android:textColor="@color/black"
            android:padding="16dp" />

        <Button
            android:id="@+id/decrement"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Dec"
            android:textAllCaps="true"
            android:textSize="30sp"
            android:layout_marginEnd="10dp"
            android:textColor="@color/black"
            android:onClick="decrease"/>

    </androidx.appcompat.widget.LinearLayoutCompat>





    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:padding="16dp"
        android:textAllCaps="true"
        android:text="@string/string_textview" />

    <TextView
        android:id="@+id/price_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/price"
        android:padding="16dp"
        android:textSize="30sp"/>

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/order"
        android:textAllCaps="true"
        android:textSize="30sp"
        android:layout_marginEnd="10dp"
        android:textColor="@color/black"
        android:onClick="submitOrder"/>

</androidx.appcompat.widget.LinearLayoutCompat>